applied fixes to nanofury conf https://www.pivotaltracker.com/story/show/159838674

--- a/cgminer.nanofury.conf
+++ b/cgminer.nanofury.conf
@@ -2,12 +2,12 @@
 "pools" : [
 	{
 		"url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
-		"user" : "DocDrydenn.CRYPTO-TBb",
+		"user" : "DocDrydenn.PiMP",
 		"pass" : "d=5.8272"
 	}
 ]
 ,
-"api-description" : "cgminer 4.10.0",
+"api-description" : "cgminer 4.11.0",
 "bxf-bits" : "54",
 "bxf-debug" : "0",
 "bxf-temp-target" : "82",
@@ -18,5 +18,5 @@
 "nfu-bits" : "50",
 "osm-led-mode" : "4",
 "shares" : "0",
-"suggest-diff" : "5.8272"
+"suggest-diff" : "5"
 }
