--- a/bfg.futurebit.conf
+++ b/bfg.futurebit.conf
@@ -2,7 +2,7 @@
 "pools" : [
 	{
 		"url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668/#skipcbcheck",
-		"user" : "DocDrydenn.CRYPTO-02b",
+		"user" : "DocDrydenn.PiMP",
 		"pass" : "d=512",
 		"pool-priority" : "0"
 	}
