--- a/cgminer.gekko.conf
+++ b/cgminer.gekko.conf
@@ -3,11 +3,11 @@
          {
             "notes" : "Mining-Dutch: SHA256/Multiport",
             "url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
-            "user" : "DocDrydenn.CRYPTO-01b",
+            "user" : "DocDrydenn.PiMP",
             "pass" : "d=36"
 	     }
  	],
-	"api-description" : "cgminer 4.10.0",
+	"api-description" : "cgminer 4.11.1",
 	"gekko-terminus-freq" : "150.0",
 	"gekko-2pac-freq" : "150.0",
 	"gekko-compac-freq" : "150.0",
