updated ethermine to ethpool - fixed up bminer dual mining configs

--- a/sgminer.multi.conf
+++ b/sgminer.multi.conf
@@ -2,7 +2,7 @@
 "pools" : [
         {
                 "name" : "PiMPtesting Ethereum 1",
-                "url" : "stratum+tcp://us1.ethermine.org:4444",
+                "url" : "stratum+tcp://us1.ethpool.org:3333",
                 "user" : "0xe8C128B81B26bA1614f4CF2292A5D754Ca352c91",
                 "pass" : "x",
                 "profile":"ethereum"
