--- a/sgminer.eth.conf
+++ b/sgminer.eth.conf
@@ -2,7 +2,7 @@
 "pools" : [	
         {
                 "name" : "PiMPtesting Eth Ethpool",
-                "url" : "stratum+tcp://us1.ethpool.org:3333",
+                "url" : "stratum+tcp://us1.ethermine.org:444",
                 "user" : "0xe8C128B81B26bA1614f4CF2292A5D754Ca352c91.pimp",
                 "pass" : "x",
                 "profile":"ethereum"
