--- a/cgminer.gekko.conf
+++ b/cgminer.gekko.conf
@@ -1,23 +1,27 @@
- {
-	"pools" : [
-         {
-            "notes" : "Mining-Dutch: SHA256/Multiport",
-            "url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
-            "user" : "DocDrydenn.PiMP",
-            "pass" : "d=36"
-	     }
- 	],
-	"api-description" : "cgminer 4.11.1",
-	"gekko-terminus-freq" : "150.0",
-	"gekko-2pac-freq" : "150.0",
-	"gekko-compac-freq" : "150.0",
-	"gekko-start-freq" : "100",
-	"gekko-step-freq" : "25",
-	"gekko-step-delay" : "15",
-	"fallback-time" : "120",
-	"hotplug" : "5",
-	"log" : "20",
-	"shares" : "0",
-	"suggest-diff" : "36",
-	"widescreen" : true
+{
+"pools" : [{
+        "notes" : "Mining-Dutch: SHA256/Multiport",
+        "url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
+        "user" : "DocDrydenn.PiMP",
+        "pass" : "d=36"
+        },{
+        "notes" : "Mining-Dutch: SHA256/Multiport",
+        "url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
+        "user" : "DocDrydenn.PiMP",
+        "pass" : "d=36"
+        }],
+"api-description" : "cgminer 4.11.1",
+"gekko-2pac-freq" : "75.0",
+"gekko-start-freq" : "75",
+"gekko-step-freq" : "25",
+"gekko-step-delay" : "15",
+"fallback-time" : "120",
+"hotplug" : "0",
+"log" : "20",
+"suggest-diff" : "36",
+"widescreen" : true,
+"scan-serial" : "/dev/ttyGK1",
+"scan-serial" : "/dev/ttyGK2",
+"scan-serial" : "/dev/ttyGK3",
+"scan-serial" : "/dev/ttyGK4"
 }
