--- a/bfg.futurebit.conf
+++ b/bfg.futurebit.conf
@@ -1,13 +1,17 @@
 {
 "pools" : [
-	{
-		"url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668/#skipcbcheck",
-		"user" : "DocDrydenn.PiMP",
-		"pass" : "d=512",
-		"pool-priority" : "0"
-	}
-]
-,
+        {
+                "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668/#skipcbcheck",
+                "user" : "DocDrydenn.PiMP",
+                "pass" : "d=512",
+                "pool-priority" : "0"
+        },
+        {
+                "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668/#skipcbcheck",
+                "user" : "DocDrydenn.PiMP",
+                "pass" : "d=512",
+                "pool-priority" : "0"
+        }],
 "expiry" : "120",
 "expiry-lp" : "3600",
 "failover-switch-delay" : "300",
@@ -21,15 +25,8 @@
 "quiet-work-update" : true,
 "scan-time" : "60",
 "skip-security-checks" : "0",
-"submit-stale" : true,
 "scrypt" : true,
-"temp-hysteresis" : "3",
-"shares" : 0,
-"kernel-path" : "/usr/local/share/bfgminer",
-"scan" : [
-	"ALL"
-],
-"set-device" : [
-	"MLD:clock=600"
-]
+"kernel-path" : "/opt/miners/bfgminer-futurebit",
+"scan" : "MLD:ALL",
+"set-device" : "MLD:clock=384"
 }
