--- a/cgminer.nanofury.conf
+++ b/cgminer.nanofury.conf
@@ -1,22 +1,19 @@
 {
-"pools" : [
-	{
-		"url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
-		"user" : "DocDrydenn.PiMP",
-		"pass" : "d=5.8272"
-	}
-]
-,
-"api-description" : "cgminer 4.11.0",
-"bxf-bits" : "54",
-"bxf-debug" : "0",
-"bxf-temp-target" : "82",
-"bxm-bits" : "54",
+"pools" : [{
+        "url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
+        "user" : "DocDrydenn.PiMP",
+        "pass" : "d=5"
+        },{
+        "url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
+        "user" : "DocDrydenn.PiMP",
+        "pass" : "d=5"
+        }],
+"api-description" : "cgminer 4.11.1",
 "fallback-time" : "120",
 "hotplug" : "5",
 "log" : "5",
 "nfu-bits" : "50",
-"osm-led-mode" : "4",
 "shares" : "0",
-"suggest-diff" : "5"
+"suggest-diff" : "5",
+"scan-serial" : "/dev/ttyNF1"
 }
