updated gridseed and zeus confs

--- a/cgminer.gsd.conf
+++ b/cgminer.gsd.conf
@@ -1,24 +1,19 @@
 {
-"pools" : [
-	{
-		"notes" : "PiMPtesting: Scrypt-MRR/NH",
-		"url" : "http://us-east01.miningrigrentals.com:3333",
-		"user" : "pimp.1006",
-		"pass" : "x"
-	},
-	{
-		"notes" : "PiMPtesting: Scrypt-Zpool",
-		"url" : "stratum+tcp://scrypt.mine.zpool.ca",
-		"user" : "1JiPutZrDBLW4YwXY5GbwgLJrpAQTMUUir",
-		"pass" : "c=btc"
-	}
-
-]
-,
+"pools" : [{
+        "notes" : "Mining-Dutch.nl: Scrypt",
+        "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:8888",
+        "user" : "DocDrydenn.PiMP",
+        "pass" : "d=46"
+        },{
+        "notes" : "Mining-Dutch.nl: Scrypt",
+        "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:8888",
+        "user" : "DocDrydenn.PiMP",
+        "pass" : "d=46"
+        }],
 "expiry" : "120",
-"gridseed-options" : "freq=850,voltage=0,baud=115200,per_chip_stats=1",
-"gridseed-freq" : "6D7F229A5750=850,8D7217775355=850,6D970F705650=1125",
-"hotplug" : "5",
+"gridseed-options" : "baud=115200,freq=800,chips=5,modules=1,usefifo=0,btc=16",
+"gridseed-freq" : "6D8D435F5650=800,6D8624925251=800",
+"hotplug" : "0",
 "log" : "20",
 "queue" : "1",
 "scan-time" : "60",
