--- a/cgminer.zeus.conf
+++ b/cgminer.zeus.conf
@@ -1,40 +1,22 @@
-{
-"pools" : [
-	{
-		"notes" : "PiMPtesting: Scrypt-MRR/NH",
-		"url" : "http://us-east01.miningrigrentals.com:3333",
-		"user" : "pimp.1006",
-		"pass" : "x"
-	},
-	{
-		"notes" : "PiMPtesting: Scrypt-Zpool",
-		"url" : "stratum+tcp://scrypt.mine.zpool.ca",
-		"user" : "1JiPutZrDBLW4YwXY5GbwgLJrpAQTMUUir",
-		"pass" : "c=btc"
-	}
-
-]
-,
+{"pools" : [{
+        "notes" : "Mining-Dutch",
+        "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668",
+        "user" : "DocDrydenn.PiMP",
+        "pass" : "d=154"
+        },{
+        "notes" : "Mining-Dutch",
+        "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668",
+        "user" : "DocDrydenn.PiMP",
+        "pass" : "d=154"
+        }],
 "zeus-chips" : "6",
 "zeus-clock" : "342",
 "zeus-nocheck-golden" : true,
 "expiry" : "30",
-"hotplug" : "5",
+"hotplug" : "0",
 "log" : "20",
 "queue" : "1",
 "scan-time" : "60",
 "scrypt" : true,
-"shares" : "0",
-"scan-serial" : [
-	"/dev/ttyUSB0",
-	"/dev/ttyUSB1",
-	"/dev/ttyUSB2",
-	"/dev/ttyUSB3",
-	"/dev/ttyUSB4",
-	"/dev/ttyUSB5",
-	"/dev/ttyUSB6",
-	"/dev/ttyUSB7",
-	"/dev/ttyUSB8",
-	"/dev/ttyUSB9"
-]
+"shares" : "0"
 }
