updated neoscrypt (added gobyte, updated coinlist)

--- a/nsgminer.neo.conf
+++ b/nsgminer.neo.conf
@@ -13,6 +13,13 @@
                 "user" : "6vddTG4KoXGYA71MBSJKfa2jvm7Gnn4jF8",
                 "pass" : "x",
                 "profile":"neoscrypt"
+        },
+        {
+                "name" : "PiMPtesting GoByte (GBX) on BSOD",
+                "url" : "stratum+tcp://us.bsod.pw:1932",
+                "user" : "WalletAddress.WorkerName",
+                "pass" : "x",
+                "profile":"neoscrypt"
         }
 ],
 "profiles" : [
