2020 confgen revamp - all sandbox pools + new formats!

--- a/avermore.conf
+++ b/avermore.conf
@@ -1,41 +1,35 @@
 {
-"pools" : [	
-        {
-                "name" : "RavenCoin (RVN) to Suprnova (USER1 is username.workername)",
-                "url" : "stratum+tcp://rvn.suprnova.cc:6667",
-                "user" : "pimp.pimp",
-                "pass" : "x",
-                "profile":"x16r"
-        }
-],
-"profiles" : [
-     {
-	    "name":"x16r",
-	    "algorithm":"x16r",
- "intensity" : "19",
-        "gpu-threads" : "1" 
-     }
-
-],
-	"default-profile" : "x16r",
-	"lookup_gap" : "2",
-	"worksize" : "192",
-	"failover-only" : true,
-	"failover-switch-delay" : "5",
-	"auto-fan" : true,
-	"auto-gpu" : false,
-	"vectors" : "1",
-	"temp-hysteresis" : "3",
-	"log" : "5",
-	"no-pool-disable" : true,
-	"queue" : "0",
-	"expiry" : "1",
-	"scan-time" : "1",
-	"shares" : "0",
-	"kernel-path" : "/usr/local/bin",
-	"show-coindiff" : true,
-	"keccak-unroll" : "6",
-	"hamsi-expand-big" : "1",
-	"disable-rejecting" : true,
-	"extranonce-subscription" : true
+"pools" : [{
+	"name" : "Sandbox Pool (Universal)",
+	"url" : "stratum+tcp://eu.sandbox.pool.ms:4443",
+	"user" : "1234567890.MyPiMPWorker",
+	"pass" : "x",
+	"profile":"Default"
+}],
+"profiles" : [{
+	"name":"Default",
+	"algorithm":"x16s",
+        "gpu-threads" : "1"
+}],
+"default-profile" : "Default",
+"lookup_gap" : "2",
+"worksize" : "192",
+"failover-only" : true,
+"failover-switch-delay" : "5",
+"auto-fan" : true,
+"auto-gpu" : false,
+"vectors" : "1",
+"temp-hysteresis" : "3",
+"log" : "5",
+"no-pool-disable" : true,
+"queue" : "0",
+"expiry" : "1",
+"scan-time" : "1",
+"shares" : "0",
+"kernel-path" : "/usr/local/bin",
+"show-coindiff" : true,
+"keccak-unroll" : "6",
+"hamsi-expand-big" : "1",
+"disable-rejecting" : true,
+"extranonce-subscription" : true
 }
