--- a/bfg.futurebit.conf
+++ b/bfg.futurebit.conf
@@ -1,23 +1,15 @@
 {
-"pools" : [
-        {
-                "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668/#skipcbcheck",
-                "user" : "DocDrydenn.PiMP",
-                "pass" : "d=512",
-                "pool-priority" : "0"
-        },
-        {
-                "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668/#skipcbcheck",
-                "user" : "DocDrydenn.PiMP",
-                "pass" : "d=512",
-                "pool-priority" : "0"
-        }],
+"pools" : [{
+    "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668/#skipcbcheck",
+    "user" : "DocDrydenn.MyPiMPWorker",
+    "pass" : "x",
+    "pool-priority" : "0"
+}],
 "expiry" : "120",
 "expiry-lp" : "3600",
 "failover-switch-delay" : "300",
 "log" : "20",
-"no-pool-disable" : true,
-"no-client-reconnect" : true,
+"no-pool-disable" : true,"no-client-reconnect" : true,
 "no-show-processors" : true,
 "no-show-procs" : true,
 "queue" : "1",
@@ -29,4 +21,5 @@
 "kernel-path" : "/opt/miners/bfgminer-futurebit",
 "scan" : "MLD:ALL",
 "set-device" : "MLD:clock=384"
+
 }
