--- a/bfg.gsd.conf
+++ b/bfg.gsd.conf
@@ -1,20 +1,10 @@
 {
-"pools" : [
-	{
-		"notes" : "PiMPtesting: Scrypt-MRR/NH",
-		"url" : "http://us-east01.miningrigrentals.com:3333",
-		"user" : "pimp.1006",
-		"pass" : "x"
-	},
-	{
-		"notes" : "PiMPtesting: Scrypt-Zpool",
-		"url" : "stratum+tcp://scrypt.mine.zpool.ca",
-		"user" : "1JiPutZrDBLW4YwXY5GbwgLJrpAQTMUUir",
-		"pass" : "c=btc"
-	}
-
-]
-,
+"pools" : [{
+    "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668/#skipcbcheck",
+    "user" : "DocDrydenn.MyPiMPWorker",
+    "pass" : "x",
+    "pool-priority" : "0"
+}],
 "expiry" : "120",
 "expiry-lp" : "3600",
 "log" : "20",
