--- a/cgminer.gekko.conf
+++ b/cgminer.gekko.conf
@@ -1,15 +1,10 @@
 {
 "pools" : [{
-        "notes" : "Mining-Dutch: SHA256/Multiport",
-        "url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
-        "user" : "DocDrydenn.PiMP",
-        "pass" : "d=36"
-        },{
-        "notes" : "Mining-Dutch: SHA256/Multiport",
-        "url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
-        "user" : "DocDrydenn.PiMP",
-        "pass" : "d=36"
-        }],
+	"notes" : "Mining-Dutch.nl: Multiport (SHA256)",
+	"url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
+	"user" : "DocDrydenn.MyPiMPWorker",
+	"pass" : "x"
+}],
 "api-description" : "cgminer 4.11.1",
 "gekko-2pac-freq" : "75.0",
 "gekko-start-freq" : "75",
@@ -19,9 +14,5 @@
 "hotplug" : "0",
 "log" : "20",
 "suggest-diff" : "36",
-"widescreen" : true,
-"scan-serial" : "/dev/ttyGK1",
-"scan-serial" : "/dev/ttyGK2",
-"scan-serial" : "/dev/ttyGK3",
-"scan-serial" : "/dev/ttyGK4"
+"widescreen" : true
 }
