--- a/cgminer.gsd.conf
+++ b/cgminer.gsd.conf
@@ -1,15 +1,10 @@
 {
 "pools" : [{
-        "notes" : "Mining-Dutch.nl: Scrypt",
-        "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:8888",
-        "user" : "DocDrydenn.PiMP",
-        "pass" : "d=46"
-        },{
-        "notes" : "Mining-Dutch.nl: Scrypt",
-        "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:8888",
-        "user" : "DocDrydenn.PiMP",
-        "pass" : "d=46"
-        }],
+	"notes" : "Mining-Dutch.nl: Multiport (Scrypt)",
+	"url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668",
+	"user" : "DocDrydenn.MyPiMPWorker",
+	"pass" : "x"
+}],
 "expiry" : "120",
 "gridseed-options" : "baud=115200,freq=800,chips=5,modules=1,usefifo=0,btc=16",
 "gridseed-freq" : "6D8D435F5650=800,6D8624925251=800",
