--- a/cgminer.nanofury.conf
+++ b/cgminer.nanofury.conf
@@ -1,13 +1,10 @@
 {
 "pools" : [{
-        "url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
-        "user" : "DocDrydenn.PiMP",
-        "pass" : "d=5"
-        },{
-        "url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
-        "user" : "DocDrydenn.PiMP",
-        "pass" : "d=5"
-        }],
+	"notes" : "Mining-Dutch.nl: Multiport (SHA256)",
+	"url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
+	"user" : "DocDrydenn.MyPiMPWorker",
+	"pass" : "x"
+}],
 "api-description" : "cgminer 4.11.1",
 "fallback-time" : "120",
 "hotplug" : "5",
