--- a/sgminer.multi.conf
+++ b/sgminer.multi.conf
@@ -1,313 +1,38 @@
 {
-"pools" : [
-        {
-                "name" : "PiMPtesting Ethereum 1",
-                "url" : "stratum+tcp://us1.ethermine.org:4444",
-                "user" : "0xe8C128B81B26bA1614f4CF2292A5D754Ca352c91.pimp",
-                "pass" : "x",
-                "profile":"ethereum"
-        },
-        {
-                "name" : "PiMPtesting Blake256r14 (Decred)",
-                "url" : "http://us-east01.miningrigrentals.com:3333",
-                "user" : "pimp.32523",
-                "pass" : "x",
-                "profile":"decred"
-        },
-        {
-                "name" : "PiMPtesting Blake256r8 (BlakeCoin)",
-                "url" : "http://us-east01.miningrigrentals.com:3333",
-                "user" : "pimp.1681",
-                "pass" : "x",
-                "profile":"blake256r8"
-        },
-        {
-                "name" : "PiMPtesting SHA3/Keccak",
-                "url" : "http://us-east01.miningrigrentals.com:3333",
-                "user" : "pimp.1009",
-                "pass" : "x",
-                "profile":"keccak"
-        },
-        {
-                "name" : "PiMPtesting Lyra2RE",
-                "url" : "http://us-east01.miningrigrentals.com:3333",
-                "user" : "pimp.32507",
-                "pass" : "x",
-                "profile":"lyra2re"
-        },
-        {
-                "name" : "PiMPtesting Lyra2REv2",
-                "url" : "http://us-east01.miningrigrentals.com:3333",
-                "user" : "pimp.32505",
-                "pass" : "x",
-                "profile":"lyra2rev2"
-        },
-        {
-                "name" : "PiMPtesting Nist5",
-                "url" : "http://us-east01.miningrigrentals.com:3333",
-                "user" : "pimp.5627",
-                "pass" : "x",
-                "profile":"nist5"
-        },
-        {
-                "name" : "PiMPtesting Quark",
-                "url" : "http://us-east01.miningrigrentals.com:3333",
-                "user" : "pimp.32509",
-                "pass" : "x",
-                "profile":"quark"
-        },
-        {
-                "name" : "PiMPtesting Qubit",
-                "url" : "http://us-east01.miningrigrentals.com:3333",
-                "user" : "pimp.32510",
-                "pass" : "x",
-                "profile":"qubit"
-        },
-        {
-                "name" : "PiMPtesting X11",
-                "url" : "http://us-east01.miningrigrentals.com:3333",
-                "user" : "pimp.1008",
-                "pass" : "x",
-                "profile":"x11"
-        },
-        {
-                "name" : "PiMPtesting X13",
-                "url" : "http://us-east01.miningrigrentals.com:3333",
-                "user" : "pimp.1848",
-                "pass" : "x",
-                "profile":"x13"
-        },
-        {
-                "name" : "PiMPtesting DASH 1",
-                "url" : "stratum+tcp://dash80.suprnova.cc:80",
-                "user" : "pimp.dash",
-                "pass" : "x",
-                "profile":"dash"
-        },
-        {
-            "name" : "GroestlCoin (GRS) on Zpool (USER1 is GRS address)",
-            "url" : "stratum+tcp://groestl.mine.zpool.ca:5333",
-            "user" : "FYScwnpi3KXTFWxi1qiY1FEaXKtA9NtUXV",
-            "pass" : "c=BTC",
-            "profile":"groestlcoin"
-        },
-        {
-            "name" : "GroestlCoin (GRS) on Miningpoolhub (USER1 is pool username dot worker)",
-            "url" : "stratum+tcp://hub.miningpoolhub.com:20486",
-            "user" : "pimp.pimp",
-            "pass" : "x",
-            "profile":"groestlcoin"
-        },
-        {
-            "name" : "GroestlCoin (GRS) on Suprnova (USER1 is pool username dot worker)",
-            "url" : "stratum+tcp://grs.suprnova.cc:5544",
-            "user" : "pimp.pimp",
-            "pass" : "x",
-            "profile":"groestlcoin"
-        },
-        {
-            "name" : "MonaCoin (MONA) on CoinFoundry (USER1 is MONA wallet)",
-            "url" : "stratum+tcp://mona.coinfoundry.org:3093",
-            "user" : "MRBWgynUWqL5xdwGxUZMt6yunKr2dwnojE.Pimp",
-            "pass" : "d=8",
-            "profile":"lyra2v2"
-        },
-        {
-            "name" : "VertCoin (VTC) on CoinFoundry (USER1 is VTC wallet)",
-            "url" : "stratum+tcp://vtc.coinfoundry.org:3096",
-            "user" : "VdxmUu21iWftsXw348VZgAqjogEJSQR9M2.Pimp",
-            "pass" : "d=8",
-            "profile":"lyra2v2"
-        },
-        {
-            "name" : "ZCoin (XZC) Zpool (Username is XZC wallet)",
-            "url" : "stratum+tcp://lyra2z.mine.zpool.ca:4553",
-            "user" : "aP6qk6bpjirPzF6NdaY1Fu1t1ySfgCMg1y",
-            "pass" : "c=XZC",
-            "profile":"lyra2z"
-        },
-       {
-        "name" : "PiMPtesting Zcash Flypool (USER is ZEC address dot workername)",
-        "url" : "stratum+tcp://eu1-zcash.flypool.org:3333",
-        "user" : "t1PezPss2cUJezeiHmydeh6CNsu4CT11qZD.PimpWorker",
-        "pass" : "x",
-        "profile":"zcash"
-      },
-      {
-        "name" : "PiMPtesting Zcash Nanopool (USER is ZEC address dot workername)",
-        "url" : "stratum+tcp://zec-eu1.nanopool.org:6666",
-        "user" : "t1PezPss2cUJezeiHmydeh6CNsu4CT11qZD.YourWorkerName",
-        "pass" : "x",
-        "profile": "zcash"
-      },
-      {
-        "name" : "PiMPtesting Zcash Nicehash (USER is BTC address dot workername)",
-        "url" : "stratum+tcp://equihash.usa.nicehash.com:3357",
-        "user" : "1JiPutZrDBLW4YwXY5GbwgLJrpAQTMUUir.YourWorkername",
-        "pass" : "x",
-        "profile": "zcash"
-      }
-],
-"profiles" : [
-      {
-        "name":"ethereum",
-        "algorithm":"ethash-new",
-        "xintensity" : "2048",
-        "worksize" : "192",
-        "gpu-threads" : "1" 
-     },
-     {
-	    "name":"decred",
-	    "algorithm":"decred",
-	    "intensity" : "21",
-	    "gpu-threads" : "2",
-	    "no-submit-stale" : true
-    },
-    {
-	    "name":"blake256r8",
-	    "algorithm":"blake256r8",
-	    "intensity" : "15",
-        "gpu-threads" : "2"
-    },
-     {
-		"name" : "keccak",
-		"algorithm" : "maxcoin",
-		"intensity" : "13",
-		"gpu-threads" : "1"
-    },
-     {
-	    "name":"lyra2re",
-	    "algorithm":"lyra2re",
-	    "intensity" : "15",
-        "gpu-threads" : "2"
-    },
-     {
-	    "name":"lyra2rev2",
-	    "algorithm":"lyra2rev2",
-	    "intensity" : "15",
-	    "gpu-threads" : "2"
-    },
-    {
-		"name" : "neoscrypt",
-		"algorithm" : "neoscrypt",
-		"intensity" : "17",
-		"gpu-threads" : "2"
-     },
-    {
-		"name" : "nist5",
-		"algorithm" : "talkcoin-mod",
-		"intensity" : "17",
-		"gpu-threads" : "2"
-     },
-     {
-		"name" : "quark",
-		"algorithm" : "quarkcoin",
-		"intensity" : "17",
-		"gpu-threads" : "2"
-     },
-     {
-		"name" : "qubit",
-		"algorithm" : "qubitcoin",
-		"intensity" : "17",
-		"gpu-threads" : "2"
-     },
-    {
-	    "name":"x11",
-	    "algorithm" : "darkcoin-mod",
-	    "intensity" : "15",
-        "gpu-threads" : "2"
-    },
-    {
-        "name":"x13",
-        "algorithm":"marucoin-mod",
-        "intensity" : "15",
-        "thread-concurrency" : "8192",
-        "gpu-threads" : "2"
-    },
-    {
-        "name":"x15",
-        "algorithm":"bitblock",
-        "intensity" : "15",
-        "thread-concurrency" : "8192",
-        "gpu-threads" : "2"
-    },
-    {
-        "name":"yescrypt",
-        "algorithm":"yescrypt",
-        "intensity" : "15",
-        "gpu-threads" : "2"
-    },
-    {
-        "name":"dash",
-        "algorithm" : "darkcoin-mod",
-        "intensity" : "15",
-        "gpu-threads" : "2"
-    },
-    {
-        "name" : "groestlcoin",
-        "algorithm" : "groestlcoin",
-        "intensity" : "20",
-        "thread-concurrency" : "8192",
-        "lookup-gap" : "2",
-        "worksize" : "256",
-        "gpu-threads" : "“2",
-        "expiry" : "120",
-        "failover-only" : true,
-        "log" : "5",
-        "queue" : "4",
-        "scan-time" : "40",
-        "temp-hysteresis" : "3",
-        "no-submit-stale" : true
-    },
-    {
-        "name":"lyra2v2",
-        "algorithm" : "lyra2v2",
-        "intensity" : "15",
-        "gpu-threads" : "2"
-    },
-    {
-        "name":"lyra2z",
-        "algorithm":"lyra2z",
-        "intensity" : "15",
-        "gpu-threads" : "2" 
-    },
-    {
-        "name":"cryptonight",
-        "algorithm":"cryptonight",
-        "rawintensity" : "640",
-        "thread-concurrency" : "8193",
-        "gpu-threads" : "1" 
-    },
-    {
-        "name":"zcash",
-        "algorithm":"equihash",
-        "intensity" : "20",
-        "gpu-threads" : "2" 
-    }
-
-],
-	"default-profile" : "ethereum",
-	"lookup_gap" : "2",
-	"worksize" : "192",
-	"failover-only" : true,
-	"failover-switch-delay" : "5",
-	"auto-fan" : true,
-	"vectors" : "1",
-    "gpu-fan" : "50-100",
-	"temp-hysteresis" : "3",
-	"temp-cutoff" : "95",
-	"temp-overheat" : "90",
-	"temp-target" : "75",
-	"log" : "5",
-	"no-pool-disable" : true,
-	"queue" : "0",
-	"expiry" : "1",
-	"scan-time" : "1",
-	"shares" : "0",
-	"kernel-path" : "/usr/local/bin",
-	"show-coindiff" : true,
-	"keccak-unroll" : "6",
-	"hamsi-expand-big" : "1",
-	"disable-rejecting" : true,
-	"extranonce-subscription" : true
+"pools" : [{
+	"name" : "Sandbox Pool (Ethash)",
+	"url" : "stratum+tcp://eu.sandbox.pool.ms:4445",
+	"user" : "1234567890.MyPiMPWorker",
+	"pass" : "x",
+	"profile":"Default"
+}],
+"profiles" : [{
+	"name":"Default",
+	"algorithm":"ethash",
+        "gpu-threads" : "1"
+}],
+"default-profile" : "Default",
+"lookup_gap" : "2",
+"worksize" : "192",
+"failover-only" : true,
+"failover-switch-delay" : "5",
+"auto-fan" : true,
+"vectors" : "1",
+"gpu-fan" : "50-100",
+"temp-hysteresis" : "3",
+"temp-cutoff" : "95",
+"temp-overheat" : "90",
+"temp-target" : "75",
+"log" : "5",
+"no-pool-disable" : true,
+"queue" : "0",
+"expiry" : "1",
+"scan-time" : "1",
+"shares" : "0",
+"kernel-path" : "/usr/local/bin",
+"show-coindiff" : true,
+"keccak-unroll" : "6",
+"hamsi-expand-big" : "1",
+"disable-rejecting" : true,
+"extranonce-subscription" : true
 }
