--- a/sgminer-fancyix.conf
+++ b/sgminer-fancyix.conf
@@ -1,69 +1,38 @@
 {
-"pools" : [
-  {
-    "name" : "SUQA (x22i) on BSOD (Username is SUQA wallet)",
-    "url" : "stratum+tcp://eu.bsod.pw:2460",
-    "user" : "SQvrmU5bsPdS9KFFph55gh7miDkQrWsSkM",
-    "pass" : "x",
-    "profile":"x22i"
-  },
-  {
-    "name" : "ZCoin (XZC) Zpool (Username is XZC wallet)",
-    "url" : "stratum+tcp://lyra2z.mine.zpool.ca:4553",
-    "user" : "aP6qk6bpjirPzF6NdaY1Fu1t1ySfgCMg1y",
-    "pass" : "c=XZC",
-    "profile":"lyra2z"
-  },
-  {
-    "name" : "ZCoin (XZC) MiningPoolHub (User.worker from pool account)",
-    "url" : "stratum+tcp://us-east.lyra2z-hub.miningpoolhub.com:20581",
-    "user" : "pimp.pimp",
-    "pass" : "x",
-    "profile": "lyra2z"
-  },
-  {
-    "name" : "ZCoin (XZC) Suprnova (User.worker from pool account)",
-    "url" : "stratum+tcp://xzc.suprnova.cc:1569",
-    "user" : "pimp.pimp",
-    "pass" : "x",
-    "profile": "lyra2z"
-  }
-],
-"profiles" : [
-   {
-    "name":"x22i",
-    "algorithm":"x22i",
-    "intensity" : "18",
-    "gpu-threads" : "2" 
-  },
-  {
-    "name":"lyra2z",
-    "algorithm":"lyra2z",
-    "intensity" : "15",
-    "gpu-threads" : "2" 
-  }
-],
-	"default-profile" : "x22i",
-  "temp-cutoff" : "95",
-  "temp-overheat" : "90",
-  "temp-target" : "75",
-  "auto-fan" : true,
-	"lookup_gap" : "2",
-	"worksize" : "32",
-	"failover-only" : true,
-	"failover-switch-delay" : "5",
-	"vectors" : "1",
-	"temp-hysteresis" : "3",
-	"log" : "5",
-	"no-pool-disable" : true,
-	"queue" : "0",
-	"expiry" : "1",
-	"scan-time" : "1",
-	"shares" : "0",
-	"kernel-path" : "/usr/local/bin",
-	"show-coindiff" : true,
-	"keccak-unroll" : "6",
-	"hamsi-expand-big" : "1",
-	"disable-rejecting" : true,
-	"extranonce-subscription" : true
+"pools" : [{
+	"name" : "Sandbox Pool (Ethash)",
+	"url" : "stratum+tcp://eu.sandbox.pool.ms:4445",
+	"user" : "1234567890.MyPiMPWorker",
+	"pass" : "x",
+	"profile":"Default"
+}],
+"profiles" : [{
+	"name":"Default",
+	"algorithm":"ethash",
+        "gpu-threads" : "1"
+}],
+"default-profile" : "Default",
+"temp-cutoff" : "95",
+"temp-overheat" : "90",
+"temp-target" : "75",
+"auto-fan" : true,
+"lookup_gap" : "2",
+"worksize" : "32",
+"failover-only" : true,
+"failover-switch-delay" : "5",
+"vectors" : "1",
+"temp-hysteresis" : "3",
+"log" : "5",
+"no-pool-disable" : true,
+"queue" : "0",
+"expiry" : "1",
+"scan-time" : "1",
+"shares" : "0",
+"kernel-path" : "/usr/local/bin",
+"show-coindiff" : true,
+"keccak-unroll" : "6",
+"hamsi-expand-big" : "1",
+"disable-rejecting" : true,
+"extranonce-subscription" : true
+
 }
