--- a/cgminer.gekko.conf
+++ b/cgminer.gekko.conf
@@ -2,7 +2,7 @@
 "pools" : [{
 	"notes" : "Mining-Dutch.nl: Multiport (SHA256)",
 	"url" : "stratum+tcp://americas.sha256.mining-dutch.nl:9996",
-	"user" : "DocDrydenn.MyPiMPWorker",
+	"user" : "DocDrydenn.m204_2_24_mix",
 	"pass" : "x"
 }],
 "api-description" : "cgminer 4.11.1",
