--- a/bfg.zeus.conf
+++ b/bfg.zeus.conf
@@ -1,7 +1,7 @@
 {
 "pools" : [{
     "url" : "stratum+tcp://americas.scrypt.mining-dutch.nl:6668/#skipcbcheck",
-    "user" : "DocDrydenn.MyPiMPWorker",
+    "user" : "DocDrydenn.m204_2_24_mix",
     "pass" : "x",
     "pool-priority" : "0"
 }],
