--- a/sgminer.multi.conf
+++ b/sgminer.multi.conf
@@ -2,7 +2,7 @@
 "pools" : [{
 	"name" : "Sandbox Pool (Ethash)",
 	"url" : "stratum+tcp://eu.sandbox.pool.ms:4445",
-	"user" : "1234567890.MyPiMPWorker",
+	"user" : "1234567890.m204_2_24_mix",
 	"pass" : "x",
 	"profile":"Default"
 }],
